--- a/frontend/src/components/Reader/Reader.css
+++ b/frontend/src/components/Reader/Reader.css
@@ -1,5 +1,4 @@
 .reader-container {
-  height: 100%;
   width: calc(100% - 2rem);
   margin: 1rem 1rem 1rem 1rem;
   border: #212529 1px solid;
